--- a/projects.html
+++ b/projects.html
@@ -173,6 +173,36 @@
 
     <h1>Systematic Frameworks</h1>
 
+    
+    <article class="proj-entry">
+      <span class="meta">BACKEND / FULL-STACK / RENDER.COM</span>
+      <h2>Ivy_AI: Full-Stack Implementation</h2>
+      <img src="assets/ivybot.png" alt="Ivy AI Chatbot Interface" class="proj-img">
+      <p class="desc">A full-stack architecture separating sensitive logic from the user interface. This project utilizes a Python-based backend on Render to securely interface with LLM APIs.</p>
+      <ul class="bullets">
+        <li><strong>Architecture:</strong> Built a specialized backend service on Render.com to manage API authentication and data security.</li>
+        <li><strong>Security:</strong> Implemented server-side environment variables to protect sensitive API keys and validate user inputs.</li>
+      </ul>
+      <div class="link-container">
+        <a href="https://github.com/IvyFlosVV/backend_and_frontend" target="_blank" class="external-link">GitHub Repository</a>
+      </div>
+    </article>
+
+    <article class="proj-entry">
+      <span class="meta">AI / GENERATIVE ART / API</span>
+      <h2>Muse & Machine</h2>
+      <img src="assets/artmuse.png" alt="Muse and Machine Interface" class="proj-img">
+      <p class="desc">A generative art explorer that curates masterpieces from the Art Institute of Chicago and uses Gemini 2.0 Flash to synthesize real-time "AI Curator" insights.</p>
+      <ul class="bullets">
+        <li><strong>Integration:</strong> Leveraged REST APIs to fetch high-resolution archival data.</li>
+        <li><strong>LLM:</strong> Implemented Google Gemini to generate contextual historical analysis for each artwork.</li>
+      </ul>
+      <div class="link-container">
+        <a href="https://ivyflosvv.github.io/MuseMachine.github.io/" target="_blank" class="demo-btn">View Live Demo</a>
+        <a href="https://github.com/IvyFlosVV/MuseMachine.github.io" target="_blank" class="external-link">GitHub Repository</a>
+      </div>
+    </article>
+    
     <article class="proj-entry">
       <span class="meta">AI / GENERATIVE ART / API</span>
       <h2>Muse & Machine</h2>
