--- a/projects.html
+++ b/projects.html
@@ -173,7 +173,21 @@
 
     <h1>Systematic Frameworks</h1>
 
-    
+    <article class="proj-entry">
+      <span class="meta">FULL-STACK / AI / AUDIO GENERATION</span>
+      <h2>AuraCast</h2>
+      <img src="assets/Cast.jpg" alt="AuraCast Application Interface" class="proj-img">
+      <p class="desc">A full-stack web application that transforms long-form eBooks into immersive, interactive, two-host AI podcasts.</p>
+      <ul class="bullets">
+        <li><strong>Architecture:</strong> Parses expansive texts into digestible chapters for efficient backend processing.</li>
+        <li><strong>Integration:</strong> Utilizes the Gemini 1.5 Pro API alongside Edge-TTS to synthesize dynamic audio conversations that users can listen to, interrupt, and query in real-time.</li>
+      </ul>
+      <div class="link-container">
+        <a href="https://auracast-vf1k.onrender.com" target="_blank" class="demo-btn">View Live Demo</a>
+        <a href="https://github.com/IvyFlosVV/AuraCast" target="_blank" class="external-link">GitHub Repository</a>
+      </div>
+    </article>
+
     <article class="proj-entry">
       <span class="meta">BACKEND / FULL-STACK / RENDER.COM</span>
       <h2>Ivy_AI: Full-Stack Implementation</h2>
